--- a/Tasks/Tasks/Views/Base.lproj/Main.storyboard
+++ b/Tasks/Tasks/Views/Base.lproj/Main.storyboard
@@ -50,6 +50,7 @@
                                 <connections>
                                     <outlet property="completedButton" destination="5oa-C8-LyQ" id="1JW-bM-t5x"/>
                                     <outlet property="taskNameLabel" destination="1pW-jW-VAN" id="PoD-Sc-9mb"/>
+                                    <segue destination="Rzw-WF-qnO" kind="show" identifier="ToTaskDetail" id="uzd-OA-dKX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -70,12 +71,109 @@
             </objects>
             <point key="canvasLocation" x="-964" y="767"/>
         </scene>
+        <!--Task Detail-->
+        <scene sceneID="5dw-C6-lck">
+            <objects>
+                <viewController id="Rzw-WF-qnO" customClass="TaskDetailViewController" customModule="Tasks" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ivE-wZ-M3C">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="19x-mV-nSG">
+                                <rect key="frame" x="20" y="160" width="374" height="358.5"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Task Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wAP-fC-4Cb">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="25.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ryJ-OM-Q4R">
+                                        <rect key="frame" x="0.0" y="45.5" width="374" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Complete?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i9J-O2-mxf">
+                                                <rect key="frame" x="0.0" y="0.0" width="344" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hST-R8-aJB">
+                                                <rect key="frame" x="344" y="0.0" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="hST-R8-aJB" secondAttribute="height" multiplier="1:1" id="H3h-25-lLF"/>
+                                                    <constraint firstAttribute="width" constant="30" id="uUr-Ca-ShL"/>
+                                                </constraints>
+                                                <state key="normal" image="square" catalog="system"/>
+                                                <connections>
+                                                    <action selector="toggleComplete:" destination="Rzw-WF-qnO" eventType="touchUpInside" id="nMn-ds-1DY"/>
+                                                    <action selector="toggleComplete:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qlX-uI-1Fn"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="KOY-rx-JmJ">
+                                        <rect key="frame" x="0.0" y="95.5" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="Low"/>
+                                            <segment title="Normal"/>
+                                            <segment title="High"/>
+                                            <segment title="Critical"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DGx-WD-IFr">
+                                        <rect key="frame" x="0.0" y="146.5" width="374" height="212"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOTES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SVh-rW-061">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6mv-Mu-gqc">
+                                                <rect key="frame" x="0.0" y="28.5" width="374" height="2"/>
+                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="2" id="gPg-gP-u21"/>
+                                                </constraints>
+                                            </view>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="y1c-S2-iF0">
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="173.5"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ead-Lq-8LN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="19x-mV-nSG" firstAttribute="top" secondItem="Ead-Lq-8LN" secondAttribute="top" constant="20" id="0VD-Bt-3W9"/>
+                            <constraint firstItem="19x-mV-nSG" firstAttribute="leading" secondItem="Ead-Lq-8LN" secondAttribute="leading" constant="20" id="gAW-dm-Uqs"/>
+                            <constraint firstItem="Ead-Lq-8LN" firstAttribute="trailing" secondItem="19x-mV-nSG" secondAttribute="trailing" constant="20" id="l00-Cl-jfK"/>
+                            <constraint firstItem="19x-mV-nSG" firstAttribute="height" secondItem="ivE-wZ-M3C" secondAttribute="height" multiplier="0.400112" id="nZh-1G-cS1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Task Detail" id="W5O-f4-ZV7"/>
+                    <connections>
+                        <outlet property="completeButton" destination="hST-R8-aJB" id="6R3-mw-Auz"/>
+                        <outlet property="nameTextField" destination="wAP-fC-4Cb" id="mrH-kb-Fiv"/>
+                        <outlet property="notesTextView" destination="y1c-S2-iF0" id="tX3-Fj-cyb"/>
+                        <outlet property="prioritySegmentedControl" destination="KOY-rx-JmJ" id="5ct-xs-7Zh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P2M-1J-flk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-75" y="767"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="8tb-st-jzN">
             <objects>
                 <navigationController id="pHy-VJ-Fxf" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IbR-ya-ldT">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="IbR-ya-ldT">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -95,7 +193,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="i2S-vz-hYM">
-                                <rect key="frame" x="20" y="108" width="374" height="358.5"/>
+                                <rect key="frame" x="20" y="160" width="374" height="358.5"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Task Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kNB-OM-6TW">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="25.5"/>
@@ -124,8 +222,17 @@
                                             </button>
                                         </subviews>
                                     </stackView>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Sul-k4-svo">
+                                        <rect key="frame" x="0.0" y="95.5" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="Low"/>
+                                            <segment title="Normal"/>
+                                            <segment title="High"/>
+                                            <segment title="Critical"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YRB-od-Afm">
-                                        <rect key="frame" x="0.0" y="95.5" width="374" height="263"/>
+                                        <rect key="frame" x="0.0" y="146.5" width="374" height="212"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOTES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4U-oy-2Yh">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
@@ -141,7 +248,7 @@
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="R04-F0-saK">
-                                                <rect key="frame" x="0.0" y="38.5" width="374" height="224.5"/>
+                                                <rect key="frame" x="0.0" y="38.5" width="374" height="173.5"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -176,6 +283,7 @@
                     <connections>
                         <outlet property="nameTextField" destination="kNB-OM-6TW" id="af6-l5-QUp"/>
                         <outlet property="notesTextView" destination="R04-F0-saK" id="nF1-ha-XwF"/>
+                        <outlet property="prioritySegmentedControl" destination="Sul-k4-svo" id="ljQ-Ad-tk9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -187,8 +295,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OJd-JF-q2n" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xds-Zb-xml">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Xds-Zb-xml">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
